feat: Notes on git dumping + insecure deserialization